--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             overflow: hidden;
         }
 
-        /* Auth Screen - First Appearance */
+        /* Auth Screen - First Appearance: Login or Create Account */
         #authScreen {
             display: flex;
             align-items: center;
@@ -53,7 +53,7 @@
             top: 20px;
             left: 50%;
             transform: translateX(-50%);
-            font-size: 24px;
+            font-size: 28px;
             font-weight: bold;
             color: var(--text-normal);
             text-shadow: var(--shadow-medium);
@@ -63,12 +63,13 @@
         .auth-container {
             background: var(--background-secondary);
             padding: 40px;
-            border-radius: 8px;
+            border-radius: 12px;
             box-shadow: var(--shadow-heavy);
             width: 90%;
-            max-width: 400px;
+            max-width: 420px;
             text-align: center;
             z-index: 2;
+            border: 1px solid var(--border);
         }
 
         .auth-title {
@@ -78,24 +79,31 @@
             text-shadow: var(--shadow-medium);
         }
 
+        .auth-subtitle {
+            font-size: 14px;
+            color: var(--text-muted);
+            margin-bottom: 20px;
+        }
+
         .auth-tabs {
             display: flex;
             margin-bottom: 20px;
             background: var(--background-tertiary);
-            border-radius: 4px;
+            border-radius: 8px;
             overflow: hidden;
             box-shadow: var(--shadow-light);
         }
 
         .auth-tab {
             flex: 1;
-            padding: 12px;
+            padding: 12px 16px;
             background: none;
             border: none;
             color: var(--text-muted);
             cursor: pointer;
             transition: all 0.2s;
             font-weight: 500;
+            font-size: 14px;
         }
 
         .auth-tab.active {
@@ -110,18 +118,25 @@
 
         .auth-form.active {
             display: block;
+            animation: fadeIn 0.3s ease-in;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
         .auth-input {
             width: 100%;
-            padding: 12px;
+            padding: 12px 16px;
             margin-bottom: 15px;
             background: var(--channeltextarea-background);
             border: 1px solid var(--border);
-            border-radius: 4px;
+            border-radius: 6px;
             color: var(--text-normal);
             font-size: 16px;
             box-shadow: var(--shadow-light) inset;
+            transition: all 0.2s;
         }
 
         .auth-input:focus {
@@ -130,13 +145,17 @@
             box-shadow: 0 0 0 2px rgba(79, 70, 229, 0.2), var(--shadow-medium);
         }
 
+        .auth-input::placeholder {
+            color: var(--text-muted);
+        }
+
         .auth-button {
             width: 100%;
-            padding: 12px;
+            padding: 12px 16px;
             background: var(--interactive-normal);
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
             cursor: pointer;
             font-size: 16px;
             font-weight: 500;
@@ -145,7 +164,7 @@
             margin-bottom: 10px;
         }
 
-        .auth-button:hover {
+        .auth-button:hover:not(:disabled) {
             background: var(--interactive-hover);
             box-shadow: var(--shadow-heavy);
             transform: translateY(-1px);
@@ -157,12 +176,34 @@
         }
 
         .google-btn {
-            background: #4285f4;
+            background: #4285f4 !important;
             margin-top: 10px;
         }
 
         .google-btn:hover {
-            background: #3367d6;
+            background: #3367d6 !important;
+        }
+
+        .divider {
+            margin: 20px 0;
+            text-align: center;
+            color: var(--text-muted);
+            position: relative;
+        }
+
+        .divider::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 0;
+            right: 0;
+            height: 1px;
+            background: var(--border);
+        }
+
+        .divider span {
+            background: var(--background-secondary);
+            padding: 0 10px;
         }
 
         .error-msg {
@@ -184,10 +225,14 @@
             margin-top: 20px;
             padding: 15px;
             background: var(--background-tertiary);
-            border-radius: 4px;
+            border-radius: 6px;
             box-shadow: var(--shadow-light);
             text-align: left;
             display: none;
+        }
+
+        .user-info strong {
+            color: var(--text-normal);
         }
 
         .logout-btn {
@@ -199,7 +244,7 @@
             background: #c72c3b;
         }
 
-        /* Main Dashboard - Discord-like */
+        /* Main Dashboard - Hidden Initially */
         #mainApp {
             display: none;
             height: 100vh;
@@ -232,6 +277,7 @@
             transition: all 0.2s;
             position: relative;
             box-shadow: var(--shadow-light);
+            font-size: 24px;
         }
 
         .server-icon:hover {
@@ -371,10 +417,12 @@
             font-size: 12px;
             cursor: pointer;
             box-shadow: var(--shadow-light);
+            transition: all 0.2s;
         }
 
         .friend-action:hover {
             background: var(--interactive-hover);
+            box-shadow: var(--shadow-medium);
         }
 
         /* Profile Section */
@@ -402,6 +450,8 @@
             align-items: center;
             justify-content: center;
             box-shadow: var(--shadow-medium);
+            color: var(--text-normal);
+            font-size: 14px;
         }
 
         .profile-name {
@@ -438,7 +488,7 @@
         .chat-messages {
             flex: 1;
             overflow-y: auto;
-            padding: 0 16px;
+            padding: 16px;
             background-color: var(--background-primary);
             display: flex;
             flex-direction: column;
@@ -452,6 +502,7 @@
             margin: 4px 0;
             border-radius: 4px;
             background: var(--background-tertiary);
+            max-width: 80%;
         }
 
         .message-avatar {
@@ -535,15 +586,18 @@
             margin-right: 12px;
             transition: color 0.2s;
             box-shadow: var(--shadow-light);
+            padding: 5px;
+            border-radius: 4px;
         }
 
         #emojiBtn:hover {
             color: var(--text-normal);
+            background: var(--background-modifier-hover);
         }
 
         #emojiPicker {
             position: absolute;
-            bottom: 60px;
+            bottom: 70px;
             right: 20px;
             background: var(--background-secondary);
             border: 1px solid var(--border);
@@ -566,61 +620,4 @@
             padding: 5px;
             border-radius: 4px;
             transition: background 0.2s;
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-        }
-
-        .emoji:hover {
-            background: var(--background-modifier-hover);
-        }
-
-        #sendButton {
-            padding: 8px 16px;
-            background-color: var(--interactive-normal);
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-            transition: all 0.2s;
-            box-shadow: var(--shadow-medium);
-        }
-
-        #sendButton:hover:not(:disabled) {
-            background-color: var(--interactive-hover);
-            box-shadow: var(--shadow-heavy);
-            transform: translateY(-1px);
-        }
-
-        #sendButton:disabled {
-            opacity: 0.5;
-            cursor: not-allowed;
-        }
-
-        /* Right Sidebar: Members */
-        .members-sidebar {
-            width: 240px;
-            background-color: var(--background-secondary);
-            border-left: 1px solid var(--border);
-            overflow-y: auto;
-            display: flex;
-            flex-direction: column;
-            box-shadow: var(--shadow-light);
-        }
-
-        .members-header {
-            padding: 12px 16px;
-            font-size: 16px;
-            font-weight: bold;
-            color: var(--text-normal);
-            border-bottom: 1px solid var(--border);
-            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-        }
-
-        .members-list {
-            list-style: none;
-            flex: 1;
-        }
-
-        .member-item {
-            padding: 8px 16px;
-           
+            text-shadow: 0 1px 2px rgba(0
