--- a/index.html
+++ b/index.html
@@ -468,7 +468,18 @@
             }
         };
 
+        // FIX: Updated from oninput to onkeyup and added Enter key prevention.
         window.handleUserIdInput = (event) => {
+             // 1. Prevent form submission (refresh/click) on Enter key press
+            if (event.key === 'Enter' || event.keyCode === 13) {
+                event.preventDefault(); 
+                // Optionally trigger registration if the button is enabled
+                if (!document.getElementById('register-button').disabled) {
+                    handleProfileRegistration();
+                }
+                return;
+            }
+
             const input = event.target.value.trim();
             // Basic sanitization/format enforcement
             let cleanId = input.toLowerCase().replace(/[^a-z0-9_@]/g, '');
@@ -530,7 +541,7 @@
             return `
                 <div class="auth-container">
                     <h1 class="app-title">SQUIT UP!</h1>
-                    <h2 class="text-2xl font-semibold mb-6 text-white text-center">Final Step: Choose Your @User ID</h2>
+                    <h2 class="text-2xl font-semibold mb-6 text-white text-center">you can custmoize your id here LETS DO IT !</h2>
 
                     <div class="mb-6">
                         <label for="user-id-input" class="block text-sm font-medium text-gray-400 mb-2">Your Profile Name</label>
@@ -540,7 +551,7 @@
                             class="input-field w-full px-4 py-3 rounded-lg focus:ring-2 focus:ring-indigo-500 transition duration-150 ${errorClass}" 
                             placeholder="@unique_id" 
                             value="${appState.pendingUserId}"
-                            oninput="handleUserIdInput(event)"
+                            onkeyup="handleUserIdInput(event)"
                             maxlength="21"
                         />
                         ${appState.errorMessage ? `<p class="text-red-400 text-sm mt-2">${appState.errorMessage}</p>` : ''}
@@ -549,6 +560,7 @@
                     <!-- Registration Button (Enabled only if unique and valid) -->
                     <button 
                         onclick="handleProfileRegistration()" 
+                        id="register-button"
                         class="btn-register w-full py-3 font-bold rounded-lg transition duration-200 
                         ${isButtonEnabled ? 'bg-indigo-600 hover:bg-indigo-700' : 'bg-gray-700'} 
                         ${isButtonEnabled ? '' : 'disabled'}"
