--- a/index.html
+++ b/index.html
@@ -143,7 +143,8 @@
             border-radius: 1rem;
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.7);
             width: 90%;
-            max-width: 450px;
+            /* UPDATED: Increased max-width for better usability */
+            max-width: 500px; 
             border: 1px solid #3f3f6e;
         }
         .btn-register:disabled {
