--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
         .btn-primary {
             background-color: var(--primary-color);
             color: white;
-            padding: 0.75rem 1.5rem;
+            /* Changed padding from '0.75rem 1.5rem' to a smaller size */
+            padding: 0.5rem 1.25rem; 
             border-radius: 10px;
             transition: background-color 0.2s, transform 0.1s;
         }
@@ -298,8 +299,9 @@
                         <span class="online-dot !bg-green-400"></span> Online
                     </p>
                 </div>
-                <button onclick="signOut()" class="text-gray-400 hover:text-white transition">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <!-- Reduced padding and size of sign out button -->
+                <button onclick="signOut()" class="text-gray-400 hover:text-white transition p-2 rounded-full hover:bg-[#3c3b51]">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
                     </svg>
                 </button>
@@ -340,7 +342,8 @@
             <div id="chatInputContainer" class="chat-input-area hidden">
                 <div class="flex items-center">
                     <input type="text" id="messageInput" placeholder="Send a message..." class="flex-grow p-3 rounded-l-xl border-none outline-none bg-[#3c3b51] text-white placeholder-gray-400 transition focus:ring-2 focus:ring-primary-color" onkeypress="handleKeyPress(event)">
-                    <button id="sendMessageBtn" class="btn-primary rounded-r-xl rounded-l-none h-full">Send</button>
+                    <!-- Use smaller button size by inheriting from updated .btn-primary in CSS -->
+                    <button id="sendMessageBtn" class="btn-primary rounded-r-xl rounded-l-none h-full text-sm font-semibold">Send</button>
                 </div>
             </div>
 
@@ -541,8 +544,8 @@
                 
                 // Mock logout icon for demo purposes
                 const logoutIcon = document.createElement('button');
-                logoutIcon.className = 'ml-2 text-gray-400 hover:text-red-400 transition';
-                logoutIcon.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                logoutIcon.className = 'ml-2 text-gray-400 hover:text-red-400 transition p-1 rounded-full';
+                logoutIcon.innerHTML = `<svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
                 </svg>`;
 
