--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         .progress-bar {
             transition: width 0.3s ease-linear;
         }
+        /* Custom styles for fun buttons */
+        .fun-button {
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.2), 0 4px 6px -2px rgba(0, 0, 0, 0.1);
+            cursor: not-allowed;
+            text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+            font-size: 0.9rem;
+        }
     </style>
 </head>
 <body>
@@ -66,6 +73,7 @@
 
         /**
          * Renders the visually engaging Splash Screen with a fixed 3-second display time.
+         * Now includes fun placeholder buttons with shadows.
          */
         function renderSplashScreen() {
             const container = document.getElementById('app-container');
@@ -81,8 +89,21 @@
                     <p class="text-gray-400 mb-8 font-medium">Loading your chats and data...</p>
 
                     <!-- Progress Bar -->
-                    <div class="w-full max-w-sm bg-gray-700 rounded-full h-2.5 overflow-hidden">
+                    <div class="w-full max-w-sm bg-gray-700 rounded-full h-2.5 overflow-hidden mb-12">
                         <div id="progress-bar" class="bg-indigo-400 h-2.5 rounded-full progress-bar" style="width: 0%;"></div>
+                    </div>
+
+                    <!-- Fun Placeholder Buttons -->
+                    <div class="flex space-x-3 w-full max-w-xl justify-center flex-wrap gap-y-4">
+                        <button class="fun-button bg-pink-500 hover:bg-pink-600 text-white font-bold py-3 px-6 rounded-full shadow-lg hover:shadow-xl transform hover:scale-105 transition duration-200">
+                            Chat History
+                        </button>
+                        <button class="fun-button bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-full shadow-lg hover:shadow-xl transform hover:scale-105 transition duration-200">
+                            Find Friends
+                        </button>
+                        <button class="fun-button bg-yellow-500 hover:bg-yellow-600 text-gray-900 font-bold py-3 px-6 rounded-full shadow-lg hover:shadow-xl transform hover:scale-105 transition duration-200">
+                            Settings
+                        </button>
                     </div>
                 </div>
             `;
@@ -122,7 +143,7 @@
                         <span class="text-sm font-medium">User ID: <code class="bg-indigo-700 p-1 rounded-md text-xs">${appState.userId}</code></span>
                         <button 
                             id="logout-button"
-                            class="bg-indigo-700 hover:bg-indigo-800 text-white text-sm font-semibold py-1.5 px-3 rounded-lg transition duration-150"
+                            class="bg-indigo-700 hover:bg-indigo-800 text-white text-sm font-semibold py-1.5 px-3 rounded-lg shadow-md transition duration-150"
                         >
                             Logout
                         </button>
@@ -136,9 +157,9 @@
                         <p class="text-gray-600 mb-8">You are successfully authenticated. The splash screen transitioned here after 3 seconds.</p>
                         
                         <!-- Placeholder for future "Friend Search" feature -->
-                        <div class="p-6 bg-gray-50 rounded-xl border border-gray-200 shadow-lg">
-                            <h4 class="text-lg font-medium text-gray-700 mb-3">Next Step: Implement Friend Search</h4>
-                            <p class="text-sm text-gray-500">The application is ready. Now we can add the feature to search for other users using their IDs in the public collection.</p>
+                        <div class="p-6 bg-indigo-50 rounded-xl border border-indigo-200 shadow-xl">
+                            <h4 class="text-lg font-medium text-indigo-700 mb-3">Next Step: Implement Friend Search</h4>
+                            <p class="text-sm text-indigo-500">The application is ready. Now we can add the feature to search for other users using their IDs in the public collection.</p>
                         </div>
                     </div>
                 </main>
